--- a/Denk/app/src/main/res/layout/activity_main.xml
+++ b/Denk/app/src/main/res/layout/activity_main.xml
@@ -5,23 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/memeback"
-    tools:context="com.umeowstbekitten.denk.MainActivity"
-    tools:layout_editor_absoluteY="25dp"
-    tools:layout_editor_absoluteX="0dp">
+    tools:context="com.umeowstbekitten.denk.MainActivity" >
 
     <Button
         android:id="@+id/addImg"
         style="@android:style/Widget.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/add_image"
-        android:textAlignment="center"
         android:textStyle="bold"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/addFilter"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/addFilter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/addFilter"
@@ -30,11 +27,9 @@
         android:layout_height="wrap_content"
         android:text="@string/add_filter"
         android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="16dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/addImg" />
+        app:layout_constraintEnd_toStartOf="@+id/saveImg"
+        app:layout_constraintStart_toEndOf="@+id/addImg"
+        app:layout_constraintTop_toTopOf="@+id/addImg" />
 
     <Button
         android:id="@+id/saveImg"
@@ -42,12 +37,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/save"
-        android:textAlignment="center"
         android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/addFilter"
-        app:layout_constraintLeft_toRightOf="@+id/addFilter" />
+        app:layout_constraintEnd_toStartOf="@+id/more"
+        app:layout_constraintStart_toEndOf="@+id/addFilter"
+        app:layout_constraintTop_toTopOf="@+id/addFilter" />
 
     <Button
         android:id="@+id/more"
@@ -55,87 +48,82 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/share"
-        android:textAlignment="center"
         android:textStyle="bold"
-        app:layout_constraintBaseline_toBaselineOf="@+id/saveImg"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/saveImg" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/saveImg"
+        app:layout_constraintTop_toTopOf="@+id/saveImg" />
 
     <EditText
         android:id="@+id/topText"
-        android:layout_width="0dp"
+        android:layout_width="346dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="107dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginStart="19dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
         android:hint="@string/enter_top_text"
         android:inputType="text"
         android:textColor="@android:color/background_light"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottomText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        tools:layout_constraintRight_creator="1" />
 
     <EditText
         android:id="@+id/bottomText"
-        android:layout_width="0dp"
+        android:layout_width="346dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="60dp"
-        android:layout_marginTop="47dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
         android:hint="@string/enter_bottom_text"
         android:inputType="text"
         android:textColor="@android:color/background_light"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/topText"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_constraintRight_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/memefy"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/topText"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/topText" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/memefy"
         style="@android:style/Widget.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="memefy"
-        android:text="Memefy"
+        android:text="@string/memefy"
         android:textAlignment="center"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/bottomText"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <RelativeLayout
         android:id="@+id/really"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginStart="26dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
+        android:layout_margin="8dp"
         app:layout_constraintBottom_toTopOf="@+id/topText"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="13dp"
-        app:layout_constraintTop_toBottomOf="@+id/more"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addFilter" >
 
         <ImageView
             android:id="@+id/memeImg"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:adjustViewBounds="true"
             android:contentDescription="@string/add_image"
             android:scaleType="fitCenter"
@@ -145,30 +133,30 @@
             android:id="@+id/memeTop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="15dp"
             android:fontFamily="sans-serif"
             android:gravity="center_horizontal"
             android:text="@string/top_text"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_marginTop="15dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/memeBottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
             android:layout_marginBottom="18dp"
             android:fontFamily="sans-serif"
             android:gravity="center_horizontal"
             android:text="@string/bottom_text"
             android:textColor="@android:color/background_light"
             android:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" />
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
